styles/main.less
/**
 * Saint Mary the Virgin
 *
 * Main styles for the site
 */

body,
body .off-canvas-content {
    font-family: Palatino, Georgia, serif;
    background: #f4f1e1;
    color: #090a0c;
}

h1,h2,h3,h4,h5,h6 {
    font-family: Palatino, Georgia, serif;
}

#header {
    background: url(/assets/header-arch-bg.jpg) no-repeat center 42%;
    background-size: cover;
    text-align: center;
}

@media screen and (max-width: 39.9375em) {
    #header {
        background-position: center 12%;
    }
}

#header #titlebar {
    color: #fff;
    padding: 1em 0;
}

#header #titlebar a,
#header #titlebar a:hover {
    color: #fff;
}

#header #titlebar h1 {
    text-transform: uppercase;
    font-size: 2.25em;
    font-weight: bold;
    text-shadow: 0.125em 0.125em 0.25em #000;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}

#header #titlebar h2 {
    font-size: 1.75em;
    text-shadow: 0.1em 0.1em 0.125em #000;
}

#header .toggle-menu {
    text-align: left;
    margin-left: 1em;
    margin-bottom: 0.5em;
}

#header #nav,
#header #nav .is-dropdown-submenu {
    background: transparent url(/assets/semitransparent-nav-bg.png) repeat;
    z-index: 1000;
}

#off_canvas_left {
    background: #ccc;
}

#off_canvas_left .accordion {
    background: transparent url(/assets/semitransparent-nav-bg.png) repeat;
}

#header #nav {
    padding: 1em 0;
    border-top: 0.125em solid #d1c1a9;
    border-bottom: 0.125em solid #d1c1a9;
}

#header #nav ul.menu li a,
#off_canvas_left ul.menu li a {
    color: #fff;
    text-transform: uppercase;
}

#header #nav ul.menu .active > a,
#off_canvas_left ul.menu .active > a {
    background-color: transparent;
}

#header #nav .dropdown.menu.medium-horizontal > li.is-dropdown-submenu-parent > a::after,
#off_canvas_left .accordion.menu > li.is-accordion-submenu-parent > a::after {
    border-color: #fff transparent transparent;
}

#header #nav ul.menu li.is-submenu-item a,
#off_canvas_left ul.menu li.is-submenu-item a {
    text-align: left;
    text-transform: none;
    font-size: 0.925em;
    white-space: nowrap;
}

#off_canvas_left ul.menu ul.is-accordion-submenu.is-active,
#off_canvas_left ul.menu ul.is-accordion-submenu.active {
    border-bottom: 0.025em solid #f4f1e1;
    border-top: 0.025em solid #f4f1e1;
    background: transparent;
    background-color: rgba(255, 255, 255, 0.1)
}

#header #nav ul.menu li > a:hover,
#header #nav ul.menu li.is-active > a,
#header #nav ul.menu li.active > a,
#off_canvas_left ul.menu li > a:hover {
    color: #fce5c0;
}

#header #nav .dropdown.menu.medium-horizontal > li.is-dropdown-submenu-parent:hover > a::after,
#header #nav .dropdown.menu.medium-horizontal > li.is-dropdown-submenu-parent.is-active > a::after,
#header #nav .dropdown.menu.medium-horizontal > li.is-dropdown-submenu-parent.active > a::after,
#off_canvas_left .accordion.menu > li.is-accordion-submenu-parent:hover > a::after {
    border-color: #fce5c0 transparent transparent;
}

#header #nav .breadcrumbs {
    margin: 0 0.75em;
}

#header #nav .breadcrumbs li {
    color: #fce5c0;
    font-size: 0.875rem;
}

#header #nav .breadcrumbs li a {
    color: #fff;
}

#main {
    background: #fff;
}

#main .button {
    color: #f6dda9;
    border-color: #484647;
    border-radius: 0.125em;
    background-color: #121e2c;
}

#main .button:hover {
    color: #ffdb91;
    text-decoration: none;
}

#bottom-footer {
    border-top: 0.125em solid #cabfae;
    background: #597084;
}

#bottom-footer .social a {
    color: #fff;
}

#bottom-footer .social a:hover {
    color: #fce5c0;
}

#bottom-footer .search label {
    display: inline;
    color: #fff;
    font-size: 1.25em;
    line-height: 1em;
    padding-right: 0.5em;
}

#bottom-footer .search {
    padding: 0.5em 0.5em 0.5em 1.5em;
}

#bottom-footer .sqs-block {
    padding-bottom: 0;
}

#bottom-footer .search input {
    display: inline;
    width: auto;
    height: auto;
    font-size: 0.875em;
    border-radius: 0.125em;
    color: #fff;
    margin-bottom: 0;
}

@media screen and (min-width: 40em) {
    #bottom-footer .search {
        text-align: right;
    }
}

#main.light-interior {
    background: #f3ecc9;
}

#main a {
    color: #2863a8;
}

#main a:hover {
    color: #3a7bc1;
    text-decoration: underline;
}

#main h1,
#main h2 {
    font-weight: bold;
    color: #49545f;
    margin: 1em 0 0.5em 0;
    text-align: center;
}

#main h1 {
    font-size: 2.125em;
    font-variant: small-caps;
    text-shadow: -1px -1px 1px #f3ecc9, 1px 1px 1.25px #000;
}

#main h2 {
    font-size: 1.875em;
    font-variant: small-caps;
    text-shadow: -1px -1px 1px #f3ecc9, 1px 1px 1.25px #666;
}

#main h3 {
    font-size: 1.5em;
    font-variant: small-caps;
}

#main h1 a,
#main h2 a,
#main h1 a:hover,
#main h2 a:hover {
    color: #49545f;
    text-decoration: none;
}

#main blockquote {
    border: none;
    padding: 0.5em 3em;
}

#main blockquote, #main blockquote p {
    color: #444c5b;
    font-style: italic;
}

#main .thumbnail {
    border-color: #fff7d8;
}

#main .thumbnail:focus,
#main .thumbnail:hover {
    box-shadow: 0 0 6px 1px rgba(43, 61, 77, 0.5);
}

#main .empty {
    opacity: 0.25;
}

/* MTA icons */

#main .badge.mta-icon {
    font-size: 1rem;
    font-family: Helvetica, Arial, sans-serif;
    vertical-align: top;
    margin-right: 0.5em;
}

#main .badge.mta-icon.mta-icon-A,
#main .badge.mta-icon.mta-icon-C,
#main .badge.mta-icon.mta-icon-E {
    background: #0039a6;
}

#main .badge.mta-icon.mta-icon-B,
#main .badge.mta-icon.mta-icon-D,
#main .badge.mta-icon.mta-icon-F,
#main .badge.mta-icon.mta-icon-M {
    background: #ff6319;
}

#main .badge.mta-icon.mta-icon-G {
    background: #6cbe45;
}

#main .badge.mta-icon.mta-icon-J,
#main .badge.mta-icon.mta-icon-Z {
    background: #996633;
}

#main .badge.mta-icon.mta-icon-L {
    background: #a7a9ac;
}

#main .badge.mta-icon.mta-icon-N,
#main .badge.mta-icon.mta-icon-Q,
#main .badge.mta-icon.mta-icon-R {
    color: #000;
    background: #fccc0a;
}

#main .badge.mta-icon.mta-icon-1,
#main .badge.mta-icon.mta-icon-2,
#main .badge.mta-icon.mta-icon-3 {
    background: #ee352e;
}

#main .badge.mta-icon.mta-icon-4,
#main .badge.mta-icon.mta-icon-5,
#main .badge.mta-icon.mta-icon-6 {
    background: #00933c;
}

#main .badge.mta-icon.mta-icon-7 {
    background: #b933ad;
}

#main .badge.mta-icon.mta-icon-S {
    color: #fff;
    background: #808183;
}

/* Dark Interior Tweaks */

#main.dark-interior {
    background: #27384a;
    color: #fff;
}

#main.dark-interior h1,
#main.dark-interior h2 {
    color: #fde2a9;
}

#main.dark-interior h3 {
    font-size: 1.675em;
}

#main.dark-interior a {
    color: #fce5c0;
}

#main.dark-interior a:hover {
    color: #fde2a9;
}

/* Break at the Foundation small boundry */
@media screen and (max-width: 39.9375em) {
  @import 'sqs-grid-breaker';
}
@media screen and (min-width: 40em) { }

/* bug fix for the admin */

body .sqs-layout-insert-block-menu .sqs-blockicon .label {
    max-height: inherit;
}

